added some logic
