# docs/api/swagger.yaml
@@ -168,6 +168,27 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /api/dishes/popular:
+    get:
+      tags:
+        - Dishes
+      summary: Список самых популярных блюд
+      operationId: getMostPopularDishes
+      responses:
+        '200':
+          description: Список самых популярных блюд
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/DishWithIngredients'
+        '400':
+          description: Некорректный запрос
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
   /api/products/{product_name}/suppliers:
     get:
@@ -226,6 +247,24 @@ components:
           type: number
           format: double
           description: Зарплата сотрудника
+
+    MostPopularDish:
+      type: object
+      properties:
+        dish_id:
+          type: integer
+          description: Идентификатор блюда
+        name:
+          type: string
+          description: Название блюда
+        price:
+          type: number
+          format: double
+          description: Цена блюда
+        ordered_count:
+          type: integer
+          format: int64
+          description: количество раз заказано
 
     Dish:
       type: object
@@ -354,6 +393,9 @@ components:
 
     Error:
       type: object
+      required:
+        - code
+        - message
       properties:
         code:
           type: integer
